--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,5 +3,7 @@
 {% block title %}Hello HomeController!{% endblock %}
 
 {% block body %}
-
+    <div class="container">
+        {% include 'form/team.html.twig' with { form: form } %}
+    </div>
 {% endblock %}
