--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,10 +5,11 @@
 {% block body %}
     <div class="container mt-5">
         <h1 class="mb-5">Génération de signature</h1>
-        <h2 class="mb-5">Renseignez les informations de votre équipe</h2>
-        {% include 'form/team.html.twig' with { form: form } %}
-    </div>
-        <div class="container mt-5">
+        <div class="mb-5">
+            <a href="{{ path('team_add') }}" class="btn btn-primary">Ajouter un personnel</a>
+            <a href="#" class="btn btn-primary">Ajouter une bannière</a>
+            <a href="#" class="btn btn-primary">Modifier le logo</a>
+        </div>
         <h2 class="mb-5">Vos équipes</h2>
         {% include 'list/team.html.twig' with { teams: teams } %}
     </div>
