--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,18 @@
         {% endblock %}
     </head>
     <body>
+    <div class="container mt-5">
+        {% for message in app.flashes('success') %}
+            <div class="alert alert-success">
+                {{ message }}
+            </div>
+        {% endfor %}
+        {% for message in app.flashes('error') %}
+                <div class="alert alert-danger">
+                    {{ message }}
+                </div>
+        {% endfor %}
         {% block body %}{% endblock %}
+    </div>
     </body>
 </html>
