--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,16 +1,23 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello HomeController!{% endblock %}
+{% block title %}Génération de signature{% endblock %}
 
 {% block body %}
     <div class="container mt-5">
         <h1 class="mb-5">Génération de signature</h1>
         <div class="mb-5">
             <a href="{{ path('team_add') }}" class="btn btn-primary">Ajouter un personnel</a>
-            <a href="#" class="btn btn-primary">Ajouter une bannière</a>
+            <a href="{{ path('banner_add') }}" class="btn btn-primary">Ajouter une bannière</a>
             <a href="#" class="btn btn-primary">Modifier le logo</a>
         </div>
         <h2 class="mb-5">Vos équipes</h2>
         {% include 'list/team.html.twig' with { teams: teams } %}
+        <h2 class="mb-5">Vos bannières</h2>
+        {% if banner is not empty %}
+            {% include 'list/banner.html.twig' with { banner: banner } %}
+        {% else %}
+            <p>Aucune bannière trouvée</p>
+            <a href="{{ path('banner_add') }}" class="btn btn-primary">Ajouter une bannière</a>
+        {% endif %}
     </div>
 {% endblock %}
