--- a/templates/list/team.html.twig
+++ b/templates/list/team.html.twig
@@ -17,6 +17,13 @@
                 <td>{{ team.id }}</td>
                 <td>{{ team.firstName }} {{ team.lastName }}</td>
                 <td>
+                    <div class="d-flex gap-2">
+                        <a href="{{ path('team_signature', { id: team.id }) }}" class="btn btn-primary">Signature</a>
+                        <form action="{{ path('team_delete', { id: team.id }) }}" method="POST">
+                            <input type="hidden" name="token" value="{{ csrf_token('team_delete') }}">
+                            <button type="submit" class="btn btn-danger" onclick="return confirm('Êtes-vous sûr de vouloir supprimer ce personnel ?')">Supprimer</button>
+                        </form>
+                    </div>
                 </td>
             </tr>
         {% endfor %}
