--- a/templates/form/logo.html.twig
+++ b/templates/form/logo.html.twig
@@ -1,4 +1,7 @@
-{{ form_start(form) }}
+    <div class="mb-3">
+        {{ form_errors(form) }}
+    </div>
+    {{ form_start(form) }}
     <div class="mb-3">
         {{ form_row(form.imageFile) }}
     </div>
