--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -29,7 +29,10 @@
         </section>
         <section class="section mt-5">
             <h2 class="mb-5">Votre équipe</h2>
-            <a href="{{ path('team_add') }}" class="btn btn-primary mb-3">Ajouter un personnel</a>
+            <div class="d-flex flex-row mb-3" style="gap:10px;" >
+                <a href="{{ path('team_add') }}" class="btn btn-primary p-2">Ajouter un personnel</a>
+                <a href="{{ path('cache_clear') }}" class="btn btn-success p-2">Supprimer le cache</a>
+            </div>
             {% include 'list/team.html.twig' with { teams: teams } %}
         </section>
     </div>
