--- a/templates/form/team.html.twig
+++ b/templates/form/team.html.twig
@@ -24,6 +24,6 @@
         </div>
     </div>
     <div class="mb-3">
-        <button type="submit" class="btn btn-primary">Ajouter un personnel</button>
+        <button type="submit" class="btn btn-primary">{{ label|default('Valider') }}</button>
     </div>
 {{ form_end(form) }}
