fix: name signature

--- a/templates/team/signature.html.twig
+++ b/templates/team/signature.html.twig
@@ -27,7 +27,7 @@
                                                                 <table cellspacing="0" cellpadding="0" border="0" style="border-collapse:collapse">
                                                                     <tr>
                                                                         <td style="padding:0">
-                                                                            <span style="font-family:Helvetica,Arial,sans-serif;color:#e54920;font-size:13px;line-height:1.2;display:block">{{team.lastName}} {{team.firstName}}</span>
+                                                                            <span style="font-family:Helvetica,Arial,sans-serif;color:#e54920;font-size:13px;line-height:1.2;display:block">{{team.firstName}} {{team.lastName}}</span>
                                                                             <span style="font-family:Helvetica,Arial,sans-serif;font-size:12px;font-style:italic;line-height:1.2;display:block">{{team.title}}<br/>{{team.role}}</span>
                                                                             <div style="margin:0; padding-top:20px;">
                                                                                 <a href="tel:{{team.phoneFormatted}}" style="display: block;font-family:Helvetica,Arial,sans-serif;font-size:12px;color:#000000;text-decoration:none;line-height:1.2">{{team.phone}}</a>
