--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -18,7 +18,7 @@
                 {% endif %}
             </div>
             <div class="col-md-6">
-                <h2 class="mb-5">Votre bannières</h2>
+                <h2 class="mb-5">Votre bannière</h2>
                 {% if banner is not empty %}
                     {% include 'list/banner.html.twig' with { banner: banner } %}
                 {% else %}
