feat: nouvelle signature

--- a/templates/list/team.html.twig
+++ b/templates/list/team.html.twig
@@ -19,6 +19,7 @@
                 <td>
                     <div class="d-flex gap-2">
                         <a href="{{ path('team_signature', { id: team.id }) }}" class="btn btn-primary">Signature</a>
+                        <a href="{{ path('team_signature_alt', { id: team.id }) }}" class="btn btn-secondary">Signature Alt</a>
                         <a href="{{ path('team_update', { id: team.id }) }}" class="btn btn-warning">Modifier</a>
                         <form action="{{ path('team_delete', { id: team.id }) }}" method="POST">
                             <input type="hidden" name="token" value="{{ csrf_token('team_delete') }}">
